[package]
name = "srtb-integrate-speeds"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
rfd = "0.14.1"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.108"
